# simulated-bifurcation-algorithm

./: .codecov.yml  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MARSO.py  MOSEK_solver.ipynb  README.md  SECURITY.md  __main__.py  __test.py  accuracy.py  accuracy_analysis.json  accuracy_with_pressure.json  accuracy_without_pressure.json  app.py  brute_force.py  cbc_solver.ipynb  charts.py  comparison.py  csv_reader.py  euler.py  exact (%)_table.txt  gurobi.ipynb  ising.py  ising_table.txt  markowitz_table.txt  perf_14a_1b.json  perf_8a_1b.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  simulated_bifurcation.py  test.py  test_J.npy  test_h.npy  warm_start.npy
.github/: PULL_REQUEST_TEMPLATE.md
data/: assets.py  data.py
docs/: background.md  conf.py  getting_started.md  index.md  index.rst  main_features.md  modules.md  requirements.txt
models/: BinaryLinearProgramming.py  Covering.py  Hamiltionian.py  Inequalities.py  Ising.py  KNPO.py  Markowitz.py  Partitioning.py  QUBO.py  Simulated_Bifurcation.py  Simulation.py  SymplecticEulerScheme.py  SymplecticEulerSchemeStop.py
pytorch/: simulated_bifurcation.py
qubo/: QUBO.py
test/: test_ising.py  test_ising_interface.py  test_optimizer.py  test_polynomial.py  test_spin_polynomial.py  test_stop_window.py  test_symplectic_integrator.py
test_MOSEK.nosync/: results_MOSEK_100_4_0.npz  results_MOSEK_10_-1_0.npz  results_MOSEK_10_-1_1.npz  results_MOSEK_10_-1_2.npz  results_MOSEK_10_-1_3.npz  results_MOSEK_10_-1_4.npz  results_MOSEK_10_-1_5.npz  results_MOSEK_10_-1_6.npz  results_MOSEK_10_-1_7.npz  (+2877 more)
(+357 files in other folders)
