[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simulated_bifurcation"
version = "1.0.1"
description = "An efficient implementation of the quantum physics-inspired Simulated Bifurcation (SB) algorithm to solve Ising-like problems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bqth29/simulated-bifurcation-algorithm"
"Bug Tracker" = "https://github.com/bqth29/simulated-bifurcation-algorithm/issues"